--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2000,82 +2000,97 @@ code, pre, .highlight {
   }
 }
 
-/* line 269, ../scss/_page-specific.scss */
+/* line 270, ../scss/_page-specific.scss */
 .credits {
   overflow-y: hidden;
   overflow-x: hidden;
-  padding-top: 15px;
 }
-/* line 273, ../scss/_page-specific.scss */
+/* line 274, ../scss/_page-specific.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 277, ../scss/_page-specific.scss */
+  /* line 278, ../scss/_page-specific.scss */
   .credits td {
     padding: 1px !important;
   }
 }
-/* line 281, ../scss/_page-specific.scss */
+/* line 282, ../scss/_page-specific.scss */
 .credits a {
   padding-left: 10px;
 }
 
-/* line 285, ../scss/_page-specific.scss */
+/* line 286, ../scss/_page-specific.scss */
 .description {
   margin-bottom: 10px;
 }
 @media only all and (max-width: 767px) {
-  /* line 285, ../scss/_page-specific.scss */
+  /* line 286, ../scss/_page-specific.scss */
   .description {
     margin-top: 20px;
   }
 }
-/* line 292, ../scss/_page-specific.scss */
+/* line 293, ../scss/_page-specific.scss */
 .description button {
   margin-top: 5px;
 }
 @media only all and (max-width: 767px) {
-  /* line 292, ../scss/_page-specific.scss */
+  /* line 293, ../scss/_page-specific.scss */
   .description button {
     margin-top: 10px;
   }
 }
-/* line 299, ../scss/_page-specific.scss */
+/* line 300, ../scss/_page-specific.scss */
 .description p {
-  text-align: justify;
+  font-size: 32px;
+  line-height: 42px;
+  font-style: italic;
+}
+@media only all and (max-width: 1199px) {
+  /* line 300, ../scss/_page-specific.scss */
+  .description p {
+    font-size: 27px;
+    line-height: 37px;
+  }
+}
+@media only all and (max-width: 991px) {
+  /* line 300, ../scss/_page-specific.scss */
+  .description p {
+    font-size: 21px;
+    line-height: 33px;
+  }
 }
 
-/* line 303, ../scss/_page-specific.scss */
+/* line 319, ../scss/_page-specific.scss */
 .media {
   margin-bottom: 30px;
 }
 @media only all and (max-width: 767px) {
-  /* line 303, ../scss/_page-specific.scss */
+  /* line 319, ../scss/_page-specific.scss */
   .media {
     margin-bottom: 0px;
   }
 }
-/* line 310, ../scss/_page-specific.scss */
+/* line 326, ../scss/_page-specific.scss */
 .media p {
   margin: 0;
 }
-/* line 313, ../scss/_page-specific.scss */
+/* line 329, ../scss/_page-specific.scss */
 .media img {
   margin: 0;
 }
-/* line 317, ../scss/_page-specific.scss */
+/* line 333, ../scss/_page-specific.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 322, ../scss/_page-specific.scss */
+/* line 338, ../scss/_page-specific.scss */
 .single-programmer .media {
   margin-bottom: 20px;
 }
 
-/* line 330, ../scss/_page-specific.scss */
+/* line 346, ../scss/_page-specific.scss */
 .page-id-21 #cherry-blossoms {
   z-index: 999;
 }
