--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -297,7 +297,7 @@
             margin-top: 10px;
         }
     }
-    p {
+    /* p {
         // text-align:justify;
         font-size: 32px;
         line-height: 42px;
@@ -314,6 +314,9 @@
         @include max_tablet {
 
         }
+    } */
+    p {
+        text-align:justify;
     }
 }
 .media {
