--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -21,7 +21,9 @@ html, body {
 }
 body {
     padding: 0;
+    background: #000;
     background-color: #000;
+    overflow: hidden;
 }
 article {
     padding-left: 0 !important;
@@ -237,6 +239,28 @@ a:hover {
 
 .modal {
     top: 10%;
+}
+
+#update-browser {
+    width:  0;
+    height: 0;
+    z-index: -999999999999;
+}
+
+.ie8 #update-browser {
+    display: block !important;
+    visibility: visible !important;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #000;
+    z-index: 999999999999;
+    padding: 30px;
+
+    a {
+        font-size:37px;
+        line-height: 47px;
+    }
 }
 
 
