--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -195,6 +195,29 @@ a:hover {
     }
 }
 
+#scroll-down {
+    zoom: 80%;
+    width: 100px;
+    height: 78px;
+    margin-left: -50px;
+    margin-bottom: 10px;
+    @include background (image-url("scroll-down.png"));
+
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    z-index: 9999;
+}
+
+.bg-img, .bg-img img {
+    width: 120% !important;
+    z-index: -1;
+}
+
+.img-responsive {
+    width: 100%;
+    max-width: auto !important;
+}
 
 //  Font Awesome Icons
 
@@ -214,7 +237,6 @@ a:hover {
 .sidebar {
     padding: 10px 10px 30px 50px;
     margin-top: 25px;
-    background-color: black;
 
     @include max_laptop {
         padding: 0 10px 0 30px;
