--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -219,6 +219,10 @@ a:hover {
     max-width: auto !important;
 }
 
+#mc_signup_form {
+    background-color: transparent !important;
+}
+
 //  Font Awesome Icons
 
 .fa-desktop {
