--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -279,7 +279,8 @@
 .credits {
     overflow-y: hidden;
     overflow-x: hidden;
-    // padding-top: 15px;
+    padding-bottom: 15px;
+    
     td {
         padding: 3px !important;
     }
